<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/arkaplan"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="top"
        android:background="@color/colorPrimary"
        android:textSize="17sp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/base_status_bar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/proxima"
            android:text="@string/kayseri"
            android:textColor="#FFFFFF"
            android:textSize="27sp"
            android:translationZ="5dp" />


    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/proxima"
        android:text="@string/hava_durumu"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <View
        android:layout_width="220dp"
        android:layout_height="1dp"
        android:background="@color/white" />

    <ImageView
        android:id="@+id/hava_durumu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/galeri"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_style"
            android:text="@string/galeri"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/ilceler"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_style"
            android:text="@string/ilceler"
            android:textColor="#FFFFFF" />

    </LinearLayout>


    <Button
        android:id="@+id/kayseri"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_style"
        android:text="@string/kayseri_hakkinda"
        android:textColor="#FFFFFF" />


</LinearLayout>