<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/arkaplan"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="166dp"
            android:layout_height="207dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/profil1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-7dp"
                android:layout_marginTop="100dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proxima"
                        android:gravity="center_horizontal"
                        android:text="@string/sehir"
                        android:textColor="#FFFFFF"
                        android:textSize="23sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/white" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/proxima"
                        android:gravity="center_horizontal"
                        android:text="@string/kayseri"
                        android:textColor="#FFFFFF"
                        android:textSize="17sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/proxima"
                        android:gravity="center_horizontal"
                        android:text="@string/isim"
                        android:textColor="#FFFFFF"
                        android:textSize="23sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/white" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/proxima"
                        android:gravity="center_horizontal"
                        android:text="@string/erkan"
                        android:textColor="#FFFFFF"
                        android:textSize="17sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/proxima"
                android:gravity="center_horizontal"
                android:text="@string/okul_numarasi"
                android:textColor="#FFFFFF"
                android:textSize="23sp" />

            <View
                android:layout_width="220dp"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/white" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/proxima"
                android:gravity="center_horizontal"
                android:text="@string/numara"
                android:textColor="#FFFFFF"
                android:textSize="17sp" />


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>